--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,3 +98,7 @@ extra_javascript:
 
 extra_css:
   - https://unpkg.com/katex@0/dist/katex.min.css
+
+validation:
+  links:
+    unrecognized_links: ignore
