--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ plugins:
 markdown_extensions:
   - toc:
       permalink: true
+      toc_depth: 3
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.highlight:
@@ -84,9 +85,10 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - pymdownx.blocks.caption
+  - admonition
   - abbr
   - footnotes
-
 extra_javascript:
   - javascripts/issues.js
   - javascripts/katex.js
